Endpoints added for booking approval or reject
